<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/nome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBoxPossuiCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/possui_carro"
        app:layout_constraintStart_toStartOf="@+id/editTextNome"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <RadioGroup
        android:id="@+id/radioGroupTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPossuiCarro"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPossuiCarro">

        <RadioButton
            android:id="@+id/radioButtonAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aluno" />

        <RadioButton
            android:id="@+id/radioButtonProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professor" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonEnviarComNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:onClick="enviarComNota"
        android:text="@string/enviar_com_nota"
        app:layout_constraintStart_toStartOf="@+id/radioGroupTipo"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTipo" />

    <Button
        android:id="@+id/buttonEnviarSemNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:onClick="enviarSemPedirNota"
        android:text="@string/enviar_sem_nota"
        app:layout_constraintEnd_toEndOf="@+id/buttonEnviarComNota"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="@+id/buttonEnviarComNota"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnviarComNota" />

</androidx.constraintlayout.widget.ConstraintLayout>